# human_collision_risk_estimation

./: README.md
src/depth_example/: package.xml  setup.py
src/depth_example/dataset_action_split/test/Lying Down/: video_113.avi  video_116_flip.avi  video_117_flip.avi  video_11_flip.avi  video_121.avi  video_124.avi  video_126_flip.avi  video_127.avi  video_128_flip.avi  video_145.avi  video_147_flip.avi  video_151.avi  video_151_flip.avi  video_162_flip.avi  video_165_flip.avi  (+29 more)
src/depth_example/depth_example/: detect_pose_node.py  detect_seg_node.py  lstm_seg_node.py  train_lstm.py  video_show.py
src/depth_example/param/: config.yaml
src/hcre_msgs/: CMakeLists.txt  package.xml
src/hcre_msgs/msg/: PoseTracking.msg  RiskScore.msg  RiskScoreArray.msg
src/image_processing/: package.xml  setup.py
src/image_processing/image_processing/: dataset_statistics.py  image_processing_node.py  plot_data.py  plot_risk_score.py  pytorch_train_lstm.py  save_risk_score.py  statistics_of_risk_estimation_processing_time.py  tensorflow_train_lstm.py  test.py  train_lstm.py  train_lstm_pytorch.py  train_lstm_tensorflow.py  video_show.py
src/image_processing/models/: _minimum_distance.pkl  _minimum_distance_bakup.pkl  _risk_score.pkl  _risk_score_bakup.pkl  _time_to_collision.pkl  _time_to_collision_bakup.pkl  _velocity.pkl  _velocity_bakup.pkl  backup_minimum_distance.pkl  backup_risk_score.pkl  backup_time_to_collision.pkl  backup_velocity.pkl  lstm_model.pth
src/realsense_human_tracking/: CMakeLists.txt  package.xml
src/realsense_human_tracking/msg/: PoseTrackingArray.msg  RiskScore.msg  RiskScoreArray.msg
src/realsense_human_tracking/src/: human_pcl.cpp
src/risk_estimation/: CMakeLists.txt  package.xml
src/risk_estimation/src/: risk_estimation_node.cpp
(+967 files in other folders)
